     is specifically designed to allow operations
     with the Session to proceed after a rollback
     when the Session.is_active is True.
     [ticket:2241]

  - Fixed bug in query.join() which would occur
    in a complex multiple-overlapping path scenario,
    where the same table could be joined to
    twice.  Thanks *much* to Dave Vitek 
    for the excellent fix here.  [ticket:2247]

- sqlite
  - Ensured that the same ValueError is raised for
    illegal date/time/datetime string parsed from
    the database regardless of whether C 
    extensions are in use or not.

- postgresql
  - Use an atomic counter as the "random number" 
    source for server side cursor names; 
    conflicts have been reported in rare cases.

- ext
  - Added local_attr, remote_attr, attr accessors
    to AssociationProxy, providing quick access
    to the proxied attributes at the class
    level. [ticket:2236]

0.7.2
=====
- orm
  - Feature enhancement: joined and subquery
    loading will now traverse already-present related
    objects and collections in search of unpopulated
    attributes throughout the scope of the eager load
    being defined, so that the eager loading that is
    specified via mappings or query options
    unconditionally takes place for the full depth,
    populating whatever is not already populated.
    Previously, this traversal would stop if a related
    object or collection were already present leading
    to inconsistent behavior (though would save on
    loads/cycles for an already-loaded graph). For a
    subqueryload, this means that the additional
    SELECT statements emitted by subqueryload will
    invoke unconditionally, no matter how much of the
    existing graph is already present (hence the
    controversy). The previous behavior of "stopping"
    is still in effect when a query is the result of
    an attribute-initiated lazyload, as otherwise an
    "N+1" style of collection iteration can become